# wstdisplay

./: .clang-tidy  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  flake.nix  wstdisplay-config.cmake.in
extra/: geometry.cpp  simple.cpp
include/wstdisplay/: assert_gl.hpp  blitter.hpp  compositor.hpp  drawing_context.hpp  drawing_parameters.hpp  framebuffer.hpp  fwd.hpp  gl_vertex_arrays.hpp  graphic_context_state.hpp  graphics_context.hpp  opengl_state.hpp  opengl_window.hpp  renderbuffer.hpp  scene_context.hpp  screenshot.hpp  shader_object.hpp  shader_program.hpp  software_surface.hpp  surface.hpp  surface_drawing_parameters.hpp  surface_manager.hpp  texture.hpp  texture_manager.hpp  texture_packer.hpp
include/wstdisplay/font/: border_font_effect.hpp  font_effect.hpp  no_font_effect.hpp  text_area.hpp  ttf_font.hpp  ttf_font_manager.hpp
include/wstdisplay/scenegraph/: control_drawable.hpp  drawable.hpp  drawable_group.hpp  fill_screen_drawable.hpp  fill_screen_pattern_drawable.hpp  gradient_drawable.hpp  navigation_graph_drawable.hpp  scene_graph.hpp  scissor_drawable.hpp  shader_drawable.hpp  shockwave_drawable.hpp  stencil_drawable.hpp  surface_drawable.hpp  surface_quad_drawable.hpp  vertex_array_drawable.hpp
include/wstsystem/: fwd.hpp  system.hpp
src/: assert_gl.cpp  blitter.cpp  color.cpp  compositor.cpp  drawing_context.cpp  framebuffer.cpp  gl_vertex_arrays.cpp  graphic_context_state.cpp  graphics_context.cpp  opengl_state.cpp  opengl_window.cpp  renderbuffer.cpp  scene_context.cpp  screenshot.cpp  shader_object.cpp  shader_program.cpp  surface.cpp  surface_manager.cpp  system.cpp  texture.cpp  texture_manager.cpp  texture_packer.cpp
src/font/: border_font_effect.cpp  no_font_effect.cpp  text_area.cpp  ttf_font.cpp  ttf_font_manager.cpp
src/scenegraph/: drawable_group.cpp  gradient_drawable.cpp  scene_graph.cpp  scissor_drawable.cpp  shader_drawable.cpp  stencil_drawable.cpp  text_drawable.hpp  vertex_array_drawable.cpp
